package NYT.NClickHouseServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqProcessGossip
{ }

message TRspProcessGossip
{
    required string instance_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
